--- a/modules-available/dozmod/templates/networkshares.html
+++ b/modules-available/dozmod/templates/networkshares.html
@@ -58,9 +58,15 @@
 				</a>
 			</td>
 			<td align="center">
-				<button type="button" class="btn btn-xs btn-danger" data-toggle="modal" data-target="#deleteModal" onclick="deleteShare('{{shareid}}')">
-					<span class="glyphicon glyphicon-trash"></span>
-				</button>
+				<form method="post" action="?do=dozmod">
+					<input type="hidden" name="token" value="{{token}}">
+					<input type="hidden" name="section" value="networkshares">
+					<input type="hidden" name="shareid" value="{{shareid}}">
+					<button type="submit" name="action" value="delete" class="btn btn-xs btn-danger"
+							  data-confirm="#confirm-delete" data-title="{{sharename}}">
+						<span class="glyphicon glyphicon-trash"></span>
+					</button>
+				</form>
 			</td>
 			{{/hasEditPermissions}}
 		</tr>
@@ -76,38 +82,4 @@
 </div>
 {{/hasEditPermissions}}
 
-<!-- Modals -->
-<form method="post" action="?do=dozmod">
-	<input type="hidden" name="token" value="{{token}}">
-	<input type="hidden" name="section" value="networkshares">
-	<div class ="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-		<div class="modal-dialog" role="document">
-			<div class="modal-content">
-				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-					<h4 class="modal-title" id="myModalLabel">{{lang_delete}}</h4>
-				</div>
-				<div class="modal-body">
-					<p>{{lang_shareDeleteConfirm}}</p>
-				</div>
-				<div class="modal-footer">
-					<input type="hidden" id="delete-share-id" name="shareid" value="">
-					<button type="button" class="btn btn-default" data-dismiss="modal">{{lang_cancel}}</button>
-					<button type="submit" name="action" value="delete" class="btn btn-danger"><span class="glyphicon glyphicon-trash"></span> {{lang_delete}}</button>
-				</div>
-			</div>
-		</div>
-	</div>
-</form>
-
-<script type="text/javascript">
-
-	function deleteShare(shareid) {
-		$("#delete-share-id").val(shareid);
-	}
-
-	document.addEventListener("DOMContentLoaded", function () {
-
-	})
-
-</script>
+<div class="hidden" id="confirm-delete">{{lang_shareDeleteConfirm}}</div>
