--- a/modules-available/sysconfig/templates/list-modules.html
+++ b/modules-available/sysconfig/templates/list-modules.html
@@ -40,8 +40,9 @@
 										title="{{lang_edit}}">
 								<span class="glyphicon glyphicon-edit"></span>
 							</a>
-							<button class="btn btn-danger btn-xs confirm-delete" name="del" value="{{id}}"
-										title="{{lang_delete}}" {{perms.module.edit.disabled}}>
+							<button type="submit" class="btn btn-danger btn-xs" name="del" value="{{id}}"
+									title="{{lang_delete}}" {{perms.module.edit.disabled}} data-confirm="#confirm-delete"
+									data-title="{{title}}">
 								<span class="glyphicon glyphicon-trash"></span>
 							</button>
 						</td>
