--- a/modules-available/locations/templates/location-subnets.html
+++ b/modules-available/locations/templates/location-subnets.html
@@ -102,8 +102,8 @@
 					<div class="modal-body">
 						{{lang_areYouSureNoUndo}}
 						<div class="checkbox">
-							<input type="checkbox" name="recursive" value="on">
-							<label>{{lang_deleteChildLocations}}</label>
+							<input type="checkbox" name="recursive" value="on" id="del-rec-{{locationid}}">
+							<label for="del-rec-{{locationid}}">{{lang_deleteChildLocations}}</label>
 						</div>
 					</div>
 					<div class="modal-footer">
