--- a/modules-available/runmode/templates/module-machine-list.html
+++ b/modules-available/runmode/templates/module-machine-list.html
@@ -3,7 +3,7 @@
 	<a href="?do={{module}}">{{modulename}}</a>
 </h2>
 
-<form method="post" action="?do=runmode" onsubmit="return confirm('{{lang_confirmDelete}}')">
+<form method="post" action="?do=runmode">
 	<input type="hidden" name="token" value="{{token}}">
 	<input type="hidden" name="action" value="delete-machine">
 	<table class="table">
@@ -36,7 +36,8 @@
 				</td>
 				<td class="text-center">
 					{{#canedit}}
-					<button type="submit" class="btn btn-danger btn-sm" name="machineuuid" value="{{machineuuid}}" {{disabled}}>
+					<button type="submit" class="btn btn-danger btn-sm" name="machineuuid" value="{{machineuuid}}" {{disabled}}
+							data-confirm="#confirm-delete" data-title="{{hostname}}">
 						<span class="glyphicon glyphicon-trash"></span>
 					</button>
 					{{/canedit}}
@@ -50,3 +51,4 @@
 		{{/list}}
 	</table>
 </form>
+<div class="hidden" id="confirm-delete">{{lang_confirmDelete}}</div>
