--- a/modules-available/serversetup-bwlp-ipxe/templates/menu-list.html
+++ b/modules-available/serversetup-bwlp-ipxe/templates/menu-list.html
@@ -48,9 +48,14 @@
 			</td>
 			<td align="center">
 				{{#allowEdit}}
-					<button type="button" class="btn btn-xs btn-danger" data-toggle="modal" data-target="#deleteModal" onclick="deleteMenu('{{menuid}}')">
-						<span class="glyphicon glyphicon-trash"></span>
-					</button>
+					<form method="post" action="?do=serversetup">
+						<input type="hidden" name="token" value="{{token}}">
+						<input type="hidden" name="deleteid" value="{{menuid}}">
+						<button type="submit" name="action" value="deleteMenu" class="btn btn-xs btn-danger"
+								  data-confirm="#confirm-delete" data-title="{{title}}">
+							<span class="glyphicon glyphicon-trash"></span>
+						</button>
+					</form>
 				{{/allowEdit}}
 			</td>
 		</tr>
@@ -64,37 +69,5 @@
 	</a>
 </div>
 
+<div class="hidden" id="confirm-delete">{{lang_menuDeleteConfirm}}</div>
 <div class="clearfix"></div>
-
-
-<!-- Modals -->
-<form method="post" action="?do=serversetup">
-	<input type="hidden" name="token" value="{{token}}">
-	<div class ="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-		<div class="modal-dialog" role="document">
-			<div class="modal-content">
-				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-					<h4 class="modal-title" id="myModalLabel">{{lang_delete}}</h4>
-				</div>
-				<div class="modal-body">
-					<p>{{lang_menuDeleteConfirm}}</p>
-				</div>
-				<div class="modal-footer">
-					<input type="hidden" id="delete-menu-id" name="deleteid" value="">
-					<button type="button" class="btn btn-default" data-dismiss="modal">{{lang_cancel}}</button>
-					<button type="submit" name="action" value="deleteMenu" class="btn btn-danger"><span class="glyphicon glyphicon-trash"></span> {{lang_delete}}</button>
-				</div>
-			</div>
-		</div>
-	</div>
-</form>
-
-<script>
-	function deleteMenu(menuid) {
-		$("#delete-menu-id").val(menuid);
-	}
-	document.addEventListener('DOMContentLoaded', function() {
-		$('[data-toggle="tooltip"]').tooltip();
-	});
-</script>
