--- a/modules-available/statistics/templates/page-replace.html
+++ b/modules-available/statistics/templates/page-replace.html
@@ -60,34 +60,14 @@
 	</table>
 
 	<div class="text-right">
-		<button type="button" class="btn btn-danger" name="action" value="replace" data-toggle="modal" data-target="#confirm-dialog">
+		<button type="submit" class="btn btn-danger" name="action" value="replace" data-confirm="#confirm-replace" data-title="{{lang_replace}}">
 			<span class="glyphicon glyphicon-floppy-disk"></span>
 			{{lang_replace}}
 			(<span id="rep-count">0</span>)
 		</button>
 	</div>
-
-	<div class="modal fade" id="confirm-dialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-		<div class="modal-dialog" role="document">
-			<div class="modal-content">
-				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-					<h4 class="modal-title" id="myModalLabel">{{lang_replace}}</h4>
-				</div>
-				<div class="modal-body">
-					{{lang_sureReplaceNoUndo}}
-				</div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-default" data-dismiss="modal">{{lang_cancel}}</button>
-					<button type="submit" name="action" value="replace" class="btn btn-danger">
-						<span class="glyphicon glyphicon-floppy-disk"></span>
-						{{lang_replace}}
-					</button>
-				</div>
-			</div>
-		</div>
-	</div>
 </form>
+<div class="hidden" id="confirm-replace">{{lang_sureReplaceNoUndo}}</div>
 
 <script type="application/javascript"><!--
 	document.addEventListener('DOMContentLoaded', function () {
