[serversetup-bwlp-ipxe] Fix: Menu titles won't be used as default
When adding a new menu item and linking it to another menu, the menu's
name wouldn't be used as the item's default name. Fix that.

--- a/modules-available/serversetup-bwlp-ipxe/templates/menu-edit.html
+++ b/modules-available/serversetup-bwlp-ipxe/templates/menu-edit.html
@@ -295,8 +295,8 @@
 		});
 
 		$('.key-list').each(function() {
-			$select = $(this);
-			$source  = $('#key-list-template').find('option');
+			var $select = $(this);
+			var $source  = $('#key-list-template').find('option');
 			var def = $select.data('default');
 			$select.append($source.clone(true));
 			$select.find('option[value="' + def + '"]').attr('selected', true);
@@ -361,7 +361,7 @@
 				$title.data('old', '#stop#');
 				return;
 			}
-			var text = $('#' + entryId + '-name').text();
+			var text = $('#' + entryId.replace(':', '\\:') + '-name').text();
 			$title.val(text).data('old', text);
 		});
 	});
